[package]
name = "url-transport"
version = "1.0.0"
authors = ["jonah"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-web = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = "0.21.5"
json = "0.12"
url = "2.2.2"
log = "0.4.0"
env_logger = "0.8.4"
